# veilkey-selfhosted

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ko.md  README.md  VERSIONING.md  docker-compose.yml
.claude/: settings.json
.dal/: dal.spec.cue
.dal/dev/: charter.md  dal.cue  instructions.md
.dal/leader/: charter.md  dal.cue  instructions.md
.dal/marketing/: instructions.md
.dal/tech-writer/: instructions.md
.dal/verifier/: charter.md  dal.cue  instructions.md
.dalfactory/: dal.cue
.github/workflows/: ci.yml  (+2 more)
cue.mod/: module.cue
docs/: .gitlab-ci.yml  COMPONENTS.md  OPERATING-MODEL.md  README.md  architecture.md  ci-integration.md  cli.md  contributing.md  hardcoding-baseline.md  installation.md  runtime-contracts.md  security-model.md  setup.md  testing.md  vssh-design.md
examples/: Dockerfile.veilkey-app  docker-entrypoint-veilkey.sh  veilkey-app.service
facts/: repository.cue
install/: README.md
installer/: .gitlab-ci.yml  .golangci.yml  INSTALL.md  README.md  components.toml.example  install.sh
scripts/: install-veil-mac-remote.sh  install-veil-mac.sh  install.sh  pre-commit  setup-tmpfs-password-mac.sh  vk-bulk-apply-sync.sh
services/installer/: Cargo.toml  README.md
services/installer/src/: main.rs
services/veilkey-cli/: .goreleaser.yaml  .pre-commit-hooks.yaml  Cargo.toml
services/veilkey-cli/cmd/veilkey-session-config/: main.go
services/veilkey-cli/src/: api.rs  config.rs  detector.rs  logger.rs  main.rs  output.rs  state.rs
tests/: test_cue_facts.sh
(+662 files in other folders)
