[package]
name = "veilkey-cli-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "veilkey-cli"
path = "src/main.rs"

[[bin]]
name = "veilkey-session-config"
path = "src/bin/session_config.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
regex = "1"
urlencoding = "2"
ureq = { version = "2", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
